# gallery-dl

./: .pre-commit-config.yaml  .yamllint.yaml  README.rst  pyproject.toml  requirements.txt  script.py  script2.py  script_simple.py  setup.py
.SpaceVim.d/: tasks.toml
gallery_dl/: hydrus.py  models.py  server.py  text.py  util.py
gallery_dl/extractor/: __init__.py  bakufu.py  bi_girl.py  common.py  ddg.py  dmm.py  dtiserv2.py  duga.py  dvdrev.py  erogazou_onaneta.py  instagram.py  invidious.py  luscious.py  nitter.py  novelupdates.py  r18.py  reddit.py  reddit_preview.py  simple.py  sokmil.py  t.py  twitter.py  youtube.py
gallery_dl/templates/: base.html  gallery.html  index.html
test/: test_script.py
