[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool]

[tool.poetry]
name = "gallery-dl"
version = "1.19.3-dev"
description = "Command-line program to download image galleries and collections from several image hosting sites"
authors = ["Mike Fährmann <mike_faehrmann@web.de>"]
license = "GPLv2"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
tqdm = {version = "^4.62.3", extras = ["extra"]}
hydrus-api = {version = "^2.14.3", extras = ["extra"]}

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-golden = "^0.2.1"
pytest-vcr = "^1.0.2"
darker = "^1.3.2"
isort = "^5.10.0"
pdbpp = "^0.10.3"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::pytest.PytestCollectionWarning",
]
